# docs/swagger.json
@@ -20,6 +20,13 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "description": "name of index",
+                        "name": "index",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
                         "description": "Search query string",
                         "name": "query",
                         "in": "query",
